bk_ida/gobmkida/c0/find_worm_threats
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_threats/src/engine/worm.c:1352:32: error: use of undeclared identifier 'find_worm_threats_libs'; did you mean 'find_worm_threats'?
liberties = findlib( str, 241, find_worm_threats_libs); 
                               ^~~~~~~~~~~~~~~~~~~~~~
                               find_worm_threats
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_threats/src/engine/worm.c:1331:7: note: 'find_worm_threats' declared here
void  find_worm_threats( ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_threats/src/engine/worm.c:1355:6: error: use of undeclared identifier 'find_worm_threats_libs'
aa = find_worm_threats_libs[k]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_threats/src/engine/worm.c:1368:17: error: use of undeclared identifier 'find_worm_threats_libs'
bb = delta[l] + find_worm_threats_libs[k]; 
                ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/find_worm_threats/src/obj/1/worm.o] Error 1
